--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <title>Primeiro site HTML</title>
     <link rel="stylesheet" type="text/css" href="estilo.css"/>
 </head>
-<body id="tela">
+<body>
     <!-- Está é a pagina principal do site -->
 
+    
+    <div class="letras">
     <div class="titulo">
 
      <h1>Página inicial da disciplina de MLW</h1>
@@ -37,5 +39,9 @@
      <h2>Muito Bom</h2>
    
     </div>
+
+    </div>
+
+    
 </body>
 </html>
