--- a/paginas/videos e audios.html
+++ b/paginas/videos e audios.html
@@ -7,17 +7,10 @@
     <title>Videos e audios</title>
 </head>
 <body>
+    
     <video controls width="400">
-        <source src="../videos/Leclerc wins in Monaco - Italian commentary Leclerc vince a Monaco - Vanzini.mp4" type="video/mp4"/>
+    <source src="../videos/Leclerc wins in Monaco - Italian commentary Leclerc vince a Monaco - Vanzini.mp4" type="video/mp4">
     </video>
-
-    <br>
-
-    <video controls width="400">
-        <source src="../">
-    </video>
-
-    <br>
 
     <audio controls autoplay>
         <source src="../audios/Y2meta.app - M83 - Outro (320 kbps).mp3" type="audio/mpeg">
