--- a/paginas/videos e audios.html
+++ b/paginas/videos e audios.html
@@ -9,11 +9,11 @@
 <body>
     
     <video controls width="400">
-        <source src="../videos/Leclerc wins in Monaco - Italian commentary Leclerc vince a Monaco - Vanzini.mp4" type="video/mp4">
+        <source src="../videos/lv_0_20240528211056.mp4" type="video/mp4">
     </video>
 
     <audio controls autoplay>
-        <source src="../audios/Y2meta.app - M83 - Outro (320 kbps).mp3" type="audio/mpeg">
+        <source src="../audios/Pop Smoke & Travis Scott - Creature x 5% TINT(tiktok remix).mp3" type="audio/mp3">
     </audio>
 
 </body>
